--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   #shared_preferences: ^0.5.12+4
   shared_preferences: ^2.1.0
   flutter_easyloading: ^3.0.5
-  dio: ^5.1.1
+  # dio: ^5.1.1
   #multiple_images_picker: ^1.0.1
   image_picker: ^0.8.7+4
   carousel_slider: ^4.2.1
@@ -59,19 +59,21 @@ dependencies:
   socket_io_client: ^2.0.2
   timeago: ^3.0.2
   #fancy_shimmer_image: any
-  #stream_transform: any
+  #stream_transform: any 
   #loading_indicator: any
   photo_view: any
   uuid: any
-  chapasdk: ^0.0.5
   easy_localization: ^3.0.1
   #flutter_parsed_text: any
   chat_bubbles: ^1.4.1
-  #location: ^4.4.0
-
-
-
-
+  location: ^4.4.0
+  # geolocator: ^9.0.2
+  multi_select_flutter: ^4.1.3
+  chips_choice: ^3.0.0
+  flutter_multi_select_items: ^0.4.2
+  chapasdk: ^0.0.6
+  flutter_typeahead: ^4.6.2
+  awesome_select: ^6.0.0
   #flutter_phone_direct_caller: ^2.1.1
   #url_launcher: ^6.1.10
   # flutter_icons: ^1.1.0
@@ -93,7 +95,16 @@ dependencies:
   fluttertoast: ^8.0.8
   awesome_dialog: ^3.0.2
   syncfusion_flutter_sliders: ^21.2.5
+  checkbox_grouped: any
+  infinite_scroll_pagination: any
+  # flutter_webview_pro: ^3.0.1+4
+  # webview_flutter: ^2.3.0 
+  flutter_inappwebview: ^5.7.2+3
+  # webview_flutter: ^4.0.0
   #flutter_riverpod: ^2.3.6
+  localstorage: ^4.0.0+1
+  yenepay_flutter: ^0.0.1
+  flutter_webview_pro: ^3.0.1+4
 
 
 
