payment method completely integrated

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,9 +13,19 @@
         android:icon="@mipmap/ic_launcher"
         android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
 
 
         >
+        <provider
+    android:name="com.pichillilorenzo.flutter_inappwebview.InAppWebViewFileProvider"
+    android:authorities="${applicationId}.flutter_inappwebview.fileprovider"
+    android:exported="false"
+    android:grantUriPermissions="true">
+    <meta-data
+        android:name="android.support.FILE_PROVIDER_PATHS"
+        android:resource="@xml/provider_paths" />
+</provider>
         <activity
             android:name="io.flutter.embedding.android.FlutterActivity"
             android:exported="true"
