--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   flutter_staggered_grid_view: ^0.4.0
-  provider: ^5.0.0
+  provider: ^6.0.1
   flutter_flushbar: ^0.0.2
   flutter_slidable: ^0.6.0
   http: ^0.13.5
@@ -116,6 +116,7 @@ dependencies:
   yenepay_flutter: ^0.0.1
   flutter_webview_pro: ^3.0.1+4
   avatar_glow: ^2.0.2
+  device_preview: ^1.1.0
   # confetti: ^0.7.0
   # device_preview: any
 
@@ -188,7 +189,9 @@ flutter:
         - asset: assets/fonts/Roboto.ttf
     - family: Noto
       fonts:
-        - asset: assets/fonts/Noto.ttf    
+        - asset: assets/fonts/Noto.ttf   
+        - asset: assets/fonts/Notoeth.ttf   
+         
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
